objects/mcdm_15__MarketingCloudJourney__x.object
<CustomObject>
    <description>External object to expose Marketing Cloud journeys.</description>
    <externalDataSource>mcdm_15__MarketingCloudDataSource</externalDataSource>
    <externalName>MarketingCloudJourney</externalName>
    <fields>
        <fullName>mcdm_15__DefinitionId__c</fullName>
        <description>Id of the journey&apos;s definition.</description>
        <externalDeveloperName>DefinitionId</externalDeveloperName>
        <label>Definition ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Description__c</fullName>
        <description>Description of the Journey.</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ExecutionMode__c</fullName>
        <description>Execution Mode of the journey.</description>
        <externalDeveloperName>ExecutionMode</externalDeveloperName>
        <label>Execution Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Key__c</fullName>
        <description>Marketing Cloud key for the journey.</description>
        <externalDeveloperName>Key</externalDeveloperName>
        <label>Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__LinkedBusinessUnit__c</fullName>
        <description>The Linked Business Unit asscoiated with this journey. This field is only used to faciliate queries</description>
        <externalDeveloperName>LinkedBusinessUnit</externalDeveloperName>
        <label>Linked Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Name__c</fullName>
        <description>The marketer-provided name for the journey.</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Status__c</fullName>
        <description>Indicates if the journey is published (active) or a draft.</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Version__c</fullName>
        <description>Version of the journey.</description>
        <externalDeveloperName>Version</externalDeveloperName>
        <label>Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Journey</label>
    <listViews>
        <fullName>mcdm_15__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>MC Journeys</pluralLabel>
</CustomObject>